--- a/src/wangfuji/css/index.css
+++ b/src/wangfuji/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td, section, article, aside, header, footer, nav, dialog, figure, hgroup { margin: 0; padding: 0; }
 
 input, select, textarea { font-size: 100%; }
@@ -1524,7 +1525,7 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 
 .nav_main .menu { position: absolute; top: 0; right: 0.64rem; width: 1.2rem; height: 100%; background-image: url(../images/menu.png); -webkit-background-size: 1.2rem 0.8rem; background-size: 1.2rem 0.8rem; background-repeat: no-repeat; background-position: center; }
 
-.pageMask { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: auto; -webkit-overflow-scrolling: touch; padding-top: 6.08rem; background-color: rgba(0, 0, 0, 0.7); }
+.pageMask { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000; overflow: auto; -webkit-overflow-scrolling: touch; padding-top: 6.08rem; background-color: rgba(0, 0, 0, 0.7); }
 
 .pageMask .close { position: fixed; top: 3.4rem; right: 1.2rem; width: 0.84rem; height: 1rem; background-image: url(../images/close.png); -webkit-background-size: 0.84rem 1rem; background-size: 0.84rem 1rem; background-repeat: no-repeat; background-position: center; }
 
@@ -1555,6 +1556,126 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 .loadingWrap .page1 .links .link .item2 { width: 10.32rem; }
 
 .loadingWrap .page1 .links .link .item3 { width: 8.72rem; }
+
+.loadingWrap .page2 { display: none; }
+
+.loadingWrap .page2 .wrap { padding-left: 11.4%; padding-right: 11.4%; }
+
+.loadingWrap .page2 .wrap .head-title { font-size: 0.56rem; color: #745f31; }
+
+.loadingWrap .page2 .wrap .upload-group { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; width: 10.28rem; margin: 1rem auto 0; }
+
+.loadingWrap .page2 .wrap .upload-group .upload-area { position: relative; width: 7.56rem; height: 11.12rem; }
+
+.loadingWrap .page2 .wrap .upload-group .upload-area .bottle-bg { display: block; width: 7.56rem; height: 11.12rem; }
+
+.loadingWrap .page2 .wrap .upload-group .upload-area .uploads { position: absolute; left: 50%; top: 50%; z-index: 1; width: 4rem; height: 4rem; -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+
+.loadingWrap .page2 .wrap .upload-group .upload-area .uploads .upload-bg { display: block; width: 3.6rem; margin: 0 auto; }
+
+.loadingWrap .page2 .wrap .upload-group .upload-area .fileUpload { position: absolute; left: 0; top: 0; z-index: 2; display: block; width: 100%; height: 100%; opacity: 0; }
+
+.loadingWrap .page2 .wrap .upload-group .operation { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 1rem; }
+
+.loadingWrap .page2 .wrap .upload-group .operation .btn { width: 1rem; }
+
+.loadingWrap .page2 .wrap .upload-group .operation .btn.shrink { margin: 0.4rem auto; }
+
+.loadingWrap .page2 .wrap .upload-group .operation .btn.rotate { width: 0.92rem; }
+
+.loadingWrap .page2 .wrap .care { width: 10.28rem; margin: 0.4rem auto 1.2rem; font-size: 0.4rem; color: #745f31; }
+
+.loadingWrap .page2 .wrap .picture { width: 10.28rem; margin: 0 auto; }
+
+.loadingWrap .page2 .wrap .picture .adjust { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin-bottom: 0.8rem; /*横条样式*/ /*拖动块的样式*/ }
+
+.loadingWrap .page2 .wrap .picture .adjust .type { width: 1rem; height: 1rem; margin-right: 0.64rem; }
+
+.loadingWrap .page2 .wrap .picture .adjust .type .brightness { display: block; width: 1rem; height: 1rem; }
+
+.loadingWrap .page2 .wrap .picture .adjust .type .contrast { display: block; width: 0.8rem; height: 0.8rem; }
+
+.loadingWrap .page2 .wrap .picture .adjust .range { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+
+.loadingWrap .page2 .wrap .picture .adjust input[type=range] { -webkit-appearance: none; /*清除系统默认样式*/ width: 100%; background: -webkit-linear-gradient(#3f2c01, #3f2c01) no-repeat, #987c3d; /*设置左边颜色为#61bd12，右边颜色为#ddd*/ -webkit-background-size: 50% 100%; background-size: 50% 100%; /*设置左右宽度比例*/ height: 0.24rem; /*横条的高度*/ }
+
+.loadingWrap .page2 .wrap .picture .adjust input[type=range]::-webkit-slider-thumb { -webkit-appearance: none; /*清除系统默认样式*/ height: 0.8rem; /*拖动块高度*/ width: 0.8rem; /*拖动块宽度*/ background: #3f2c01; /*拖动块背景*/ -webkit-border-radius: 50%; border-radius: 50%; /*外观设置为圆形*/ }
+
+.loadingWrap .page2 .wrap .link { display: block; width: 7.76rem; margin: 1.8rem auto 0; }
+
+.loadingWrap .page2 .wrap .link img { display: block; width: 100%; }
+
+.loadingWrap .pageRule { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000; overflow: auto; -webkit-overflow-scrolling: touch; padding-top: 3.52rem; background-color: rgba(0, 0, 0, 0.8); }
+
+.loadingWrap .pageRule .rule-box { width: 10rem; margin: 0 auto; color: #ffffff; letter-spacing: 1px; }
+
+.loadingWrap .pageRule .rule-box .rule-title { margin-bottom: 0.4rem; font-size: 0.56rem; }
+
+.loadingWrap .pageRule .rule-box .p1 { margin-bottom: 0.28rem; font-size: 0.4rem; }
+
+.loadingWrap .pageRule .rule-box .p2 { line-height: 0.56rem; margin-top: 0.68rem; margin-bottom: 1.4rem; font-size: 0.4rem; }
+
+.loadingWrap .pageRule .rule-box .p3 { line-height: 0.8rem; margin-bottom: 0.8rem; font-size: 0.48rem; }
+
+.loadingWrap .pageRule .rule-box .p4 { line-height: 0.8rem; margin-bottom: 1.52rem; font-size: 0.48rem; }
+
+.loadingWrap .pageRule .rule-box .agree { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 0.56rem; color: #ffffff; }
+
+.loadingWrap .pageRule .rule-box .agree label { margin-right: 0.68rem; }
+
+.loadingWrap .pageRule .rule-box .agree label .checkbox { display: none; }
+
+.loadingWrap .pageRule .rule-box .agree label .check { width: 0.64rem; height: 0.6rem; }
+
+.loadingWrap .pageRule .rule-box .link { display: block; width: 7.76rem; margin: 2rem auto 0; }
+
+.loadingWrap .pageRule .rule-box .link img { display: block; width: 100%; }
+
+.ranklistWrap .wrap { padding-left: 11.4%; padding-right: 11.4%; }
+
+.ranklistWrap .wrap .rank-title { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; padding-bottom: 0.64rem; border-bottom: 1px dashed #b8a377; }
+
+.ranklistWrap .wrap .rank-title .rank { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+
+.ranklistWrap .wrap .rank-title .rank .name { font-size: 0.56rem; color: #745f31; }
+
+.ranklistWrap .wrap .rank-title .rank .ranking { margin: 0.6rem 0; font-size: 2.4rem; color: #3f2c01; }
+
+.ranklistWrap .wrap .rank-title .rank .praise { font-size: 0.4rem; color: #745f31; }
+
+.ranklistWrap .wrap .rank-title .bottle { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+
+.ranklistWrap .wrap .rank-title .bottle img { display: block; width: 3.4rem; margin: 0 auto; }
+
+.ranklistWrap .wrap .rank-group { height: 16.32rem; overflow: auto; -webkit-overflow-scrolling: touch; font-size: 0; }
+
+.ranklistWrap .wrap .rank-group li { display: inline-block; width: 50%; padding-top: 0.84rem; }
+
+.ranklistWrap .wrap .rank-group li .bottles { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
+
+.ranklistWrap .wrap .rank-group li .bottles .photo { width: 2.36rem; }
+
+.ranklistWrap .wrap .rank-group li .bottles .photo img { display: block; width: 100%; }
+
+.ranklistWrap .wrap .rank-group li .bottles .like { position: relative; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 0.96rem; height: 0.84rem; margin-left: 0.52rem; font-size: 0.4rem; color: #3f2c01; background-image: url(../images/like.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
+
+.ranklistWrap .wrap .rank-group li .bottles .like.active { background-image: url(../images/like-active.png); color: #ffffff; }
+
+.ranklistWrap .wrap .rank-group li .bottles .like .add { display: none; position: absolute; top: 0; right: 0; -webkit-transform: translate(100%, -100%); -ms-transform: translate(100%, -100%); transform: translate(100%, -100%); font-size: 0.4rem; color: #d9002a; }
+
+.ranklistWrap .wrap .rank-group li .user { margin-top: 0.6rem; text-align: center; font-size: 0.48rem; color: #3f2c01; }
+
+.ranklistWrap .wrap .btns { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; margin: 0.8rem auto 0; }
+
+.ranklistWrap .wrap .btns .link { display: block; width: 4.64rem; }
+
+.ranklistWrap .wrap .btns .link img { display: block; width: 100%; }
+
+.ranklistWrap .pageShare { display: none; position: fixed; top: 0; left: 0; z-index: 1000; width: 100%; height: 100%; padding-top: 6.8rem; overflow: auto; -webkit-overflow-scrolling: touch; background-color: rgba(0, 0, 0, 0.6); }
+
+.ranklistWrap .pageShare .hand { position: absolute; top: 0.2rem; right: 8%; width: 9.92rem; height: 5.36rem; }
+
+.ranklistWrap .pageShare p { text-align: center; letter-spacing: 1px; font-size: 0.6rem; color: #ffffff; }
 
 .cartWrap .wrap { padding-left: 7.4%; padding-right: 7.4%; }
 
@@ -1884,6 +2005,10 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 
 .buyWrap .wrap { padding-left: 11.4%; padding-right: 11.4%; }
 
+.buyWrap .wrap .swiper-button-next { background-image: url(../images/arrow_next.png); -webkit-background-size: 0.8rem 1.16rem; background-size: 0.8rem 1.16rem; }
+
+.buyWrap .wrap .swiper-button-prev { background-image: url(../images/arrow_prev.png); -webkit-background-size: 0.8rem 1.16rem; background-size: 0.8rem 1.16rem; }
+
 .buyWrap .wrap .commodity-box { margin-top: 2rem; }
 
 .buyWrap .wrap .commodity-box .commodity .photo { width: 5.48rem; margin: 0 auto 2.2rem; }
@@ -1933,3 +2058,69 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 .awardWrap .wrap .word { width: 9.6rem; margin: -1.6rem auto 0; line-height: 1.04rem; text-align: center; font-size: 0.72rem; color: #3f2c01; }
 
 .awardWrap .wrap .word .name { margin-left: 0.6rem; color: #d9002a; }
+
+.commitWrap .wrap { padding-left: 11.4%; padding-right: 11.4%; }
+
+.commitWrap .wrap .photos { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; width: 10.68rem; margin: 0 auto; }
+
+.commitWrap .wrap .photos .left { width: 3.4rem; }
+
+.commitWrap .wrap .photos .left img { display: block; width: 100%; }
+
+.commitWrap .wrap .photos .right { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; margin-left: 1.8rem; }
+
+.commitWrap .wrap .photos .right p { font-size: 0.48rem; color: #745f31; }
+
+.commitWrap .wrap .photos .right .change { width: 3.12rem; margin-top: 0.4rem; }
+
+.commitWrap .wrap .photos .right .change img { display: block; width: 100%; }
+
+.commitWrap .wrap .fillPage .detail .option { margin-bottom: 0.48rem; }
+
+.commitWrap .wrap .fillPage .detail .option .caption { width: 10.68rem; margin: 0 auto; font-size: 0.56rem; color: #3f2c01; }
+
+.commitWrap .wrap .fillPage .detail .option .area { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; width: 10.68rem; margin: 0.48rem auto 0; }
+
+.commitWrap .wrap .fillPage .detail .option .area .addr { width: 3.36rem; height: 2.32rem; padding-left: 0.2rem; padding-right: 1rem; line-height: 2.32rem; text-align: center; overflow: hidden; font-size: 0.56rem; color: #3f2c01; background-image: url(../images/textbox2.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
+
+.commitWrap .wrap .fillPage .detail .option .input-box { width: 10.68rem; height: 2.44rem; margin: 0.48rem auto 0; background-image: url(../images/textbox.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
+
+.commitWrap .wrap .fillPage .detail .option .input-box input { width: 100%; height: 100%; padding-left: 0.6rem; padding-right: 0.6rem; border: none; background: none; font-size: 0.56rem; color: #3f2c01; }
+
+.commitWrap .wrap .fillPage .detail .btn_save { width: 7.76rem; margin: 1.12rem auto 0; }
+
+.commitWrap .wrap .fillPage .detail .btn_save img { display: block; width: 100%; }
+
+.posterWrap .wrap { padding-left: 11.4%; padding-right: 11.4%; }
+
+.posterWrap .wrap .poster-head { display: block; width: 10rem; margin: 0 auto; }
+
+.posterWrap .wrap .bottle { display: block; width: 4.44rem; margin: -1.6rem auto 0; }
+
+.posterWrap .wrap .rule-box { width: 9.88rem; margin: 0.8rem auto 0; }
+
+.posterWrap .wrap .rule-box p { letter-spacing: 1px; color: #3f2c01; }
+
+.posterWrap .wrap .rule-box .caption { margin-bottom: 0.4rem; font-size: 0.56rem; }
+
+.posterWrap .wrap .rule-box .rule { line-height: 0.72rem; font-size: 0.4rem; }
+
+.posterWrap .wrap .rule-box .reward { line-height: 0.64rem; margin-top: 0.48rem; font-size: 0.4rem; }
+
+.posterWrap .wrap .rule-box .qrcode { display: block; width: 4.8rem; margin: 1.72rem auto 0; }
+
+.posterWrap .wrap .rule-box .scanning { margin-top: 0.4rem; text-align: center; font-size: 0.4rem; color: #3f2c01; }
+
+.customizedWrap .wrap { padding-left: 11.4%; padding-right: 11.4%; }
+
+.customizedWrap .wrap .bottle { display: block; width: 4.44rem; margin: 0.6rem auto 0; }
+
+.customizedWrap .wrap .tip { margin-top: 0.8rem; margin-bottom: 1.28rem; text-align: center; font-size: 0.4rem; color: #745f31; }
+
+.customizedWrap .wrap .slogan { margin-bottom: 0.32rem; text-align: center; font-size: 0.56rem; color: #3f2c01; }
+
+.customizedWrap .wrap .btnGo { display: block; width: 2.92rem; margin: 0.64rem auto 0; }
+
+.customizedWrap .wrap .btnGo.btnGo1 { margin-bottom: 1.28rem; }
+
+.customizedWrap .wrap .btnGo img { display: block; width: 100%; }
